--- a/client/src/components/answer-brief/answer-description.module.scss
+++ b/client/src/components/answer-brief/answer-description.module.scss
@@ -36,6 +36,7 @@
     margin-top: 16px;
 
     .content {
+      text-align: left;
       word-break: break-word;
       line-height: 1.6;
       white-space: normal;
