--- a/client/src/components/answer-detail/answer-detail.module.scss
+++ b/client/src/components/answer-detail/answer-detail.module.scss
@@ -2,6 +2,7 @@
   line-height: 1.67;
 
   .fullContent {
+    text-align: left;
     margin-top: 9px;
     margin-bottom: -4px;
     word-break: break-word;
