--- a/client/src/components/navbar/navbar.module.scss
+++ b/client/src/components/navbar/navbar.module.scss
@@ -114,7 +114,7 @@
         background: transparent;
         border-color: #8590a6;
       }
-      .searchButton {
+      .button {
         border-radius: 3px;
         color: #fff;
         background-color: #0084ff;
