--- a/client/src/components/question/question.module.scss
+++ b/client/src/components/question/question.module.scss
@@ -6,18 +6,38 @@
 
 .questionContainer {
   background-color: #fff;
+  padding: 1rem 0;
 
-  & .title {
-    line-height: 50px;
-    color: #121212;
-    padding-top: 12px;
-    font-size: 22px;
-    font-weight: 600;
-  }
+  & .questionInner {
+    width: 80%;
+    margin: auto;
+    text-align: left;
 
-  & .content {
-    min-height: 10px;
-    padding: 10px;
+    & .title {
+      text-align: center;
+      line-height: 50px;
+      color: #121212;
+      font-size: 22px;
+      font-weight: 600;
+    }
+
+    & .content {
+      min-height: 10px;
+      padding: 15px 0;
+    }
+
+    & .button {
+      border-radius: 3px;
+      color: #0084ff;
+      background-color: #fff;
+      padding: 0 14px;
+      border-color: #0084ff;
+      text-align: center;
+      height: 32px;
+      position: relative;
+      display: inline-block;
+      transition: all 0.2s;
+    }
   }
 }
 
