--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,12 +4,12 @@
 	padding: 0;
 	font-family: "Roboto", sans-serif;
 }
-html{
+html {
 	height: 100vh;
 }
 body {
-	margin-top:0;
-	min-height:100vh;
+	margin-top: 0;
+	min-height: 100vh;
 }
 
 .App {
@@ -51,7 +51,7 @@ body {
 	to {
 		transform: rotate(360deg);
 	}
-} 
+}
 
 /* --------------------------------------------- */
 
@@ -82,15 +82,14 @@ body {
 	margin-top: 20vh;
 }
 
-
 .main-title,
 .main-para {
 	color: #5c7aea;
 	text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff,
 		-1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
-} 
+}
 
- .main-title {
+.main-title {
 	padding-top: 10rem;
 	font-size: 5rem;
 	font-family: "Fascinate", cursive;
@@ -124,10 +123,10 @@ body {
 #reg_btn:hover span:after {
 	opacity: 1;
 	right: 0;
-} 
+}
 
 /***    Login Page     ***/
- h2 {
+h2 {
 	font-weight: 300;
 }
 
@@ -195,4 +194,36 @@ form span {
 
 .home-page-title {
 	color: #222;
-} 
+}
+
+.center-screen {
+	padding-top: 10vh;
+}
+
+.background-blurImg {
+	width: 100%;
+	height: 100vh;
+	background-image: url("./assets/background.png");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	overflow: hidden;
+	/* filter: blur(8px); */
+
+	z-index: -1;
+}
+
+.background-form {
+	background-color: rgb(0, 0, 0);
+	background-color: rgba(0, 0, 0, 0.4);
+	border: 3px solid rgba(102, 99, 99, 0.144);
+	border-radius: 10px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 2;
+	width: 80%;
+	min-height: 80vh;
+	padding: 50px 10px;
+}
