--- a/client/src/components/answer-detail/answer-detail.module.scss
+++ b/client/src/components/answer-detail/answer-detail.module.scss
@@ -2,6 +2,8 @@
   line-height: 1.67;
 
   .fullContent {
+    word-break: break-word;
+    white-space: pre-wrap;
     text-align: left;
     margin-top: 9px;
     margin-bottom: -4px;
